--- a/src/main/resources/fxml/basic_projectwizard.fxml
+++ b/src/main/resources/fxml/basic_projectwizard.fxml
@@ -9,14 +9,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
 
-<AnchorPane minHeight="250.0" minWidth="400.0" prefHeight="250.0" prefWidth="434.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.projectwizard.BasicProjectWizardController">
+<AnchorPane minHeight="119.0" minWidth="400.0" prefHeight="172.0" prefWidth="434.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.projectwizard.BasicProjectWizardController">
   <children>
-    <TextField fx:id="nameTextField" layoutX="92.0" layoutY="46.0" prefWidth="228.0" />
-    <TextField fx:id="locationTextField" editable="false" layoutX="92.0" layoutY="81.0" prefWidth="228.0" />
-    <Label layoutX="14.0" layoutY="49.0" text="PRJ NAME" />
-    <Label layoutX="14.0" layoutY="84.0" text="LOCATION" />
-    <Button fx:id="browseButton" layoutX="326.0" layoutY="81.0" mnemonicParsing="false" prefWidth="94.0" text="BROWSE..." />
-    <Button fx:id="cancelButton" cancelButton="true" mnemonicParsing="false" text="%cancel" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="16.0" />
-    <Button fx:id="okButton" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" prefWidth="73.0" text="%ok" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="108.0" />
+    <ValidatedTextField fx:id="nameTextField" layoutX="92.0" layoutY="19.0" prefWidth="228.0" />
+    <ValidatedTextField fx:id="locationTextField" editable="false" layoutX="92.0" layoutY="63.0" prefWidth="228.0" />
+    <Label layoutX="14.0" layoutY="22.0" text="%project_wizard.name" />
+    <Label layoutX="14.0" layoutY="66.0" text="%project_wizard.location" />
+    <Button fx:id="browseButton" defaultButton="true" layoutX="326.0" layoutY="64.0" mnemonicParsing="false" prefWidth="94.0" text="%browse" />
+    <AnchorPane minHeight="22.0" prefHeight="41.0" prefWidth="434.0" styleClass="bottom-tool-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <children>
+        <Button id="positiveButton" fx:id="okButton" alignment="CENTER" contentDisplay="CENTER" layoutY="10.0" mnemonicParsing="false" prefWidth="73.0" text="%ok" textAlignment="CENTER" AnchorPane.rightAnchor="97.0" />
+        <Button id="negativeButton" fx:id="cancelButton" alignment="CENTER" cancelButton="true" contentDisplay="CENTER" defaultButton="true" layoutY="10.0" mnemonicParsing="false" prefWidth="73.0" text="%cancel" textAlignment="CENTER" AnchorPane.rightAnchor="14.0" />
+      </children>
+    </AnchorPane>
+    <Label fx:id="nameErrorLabel" alignment="CENTER_RIGHT" layoutX="92.0" layoutY="45.0" prefWidth="228.0" styleClass="error-label" text="Label" />
+    <Label fx:id="locationErrorLabel" alignment="CENTER_RIGHT" layoutX="92.0" layoutY="93.0" prefWidth="228.0" styleClass="error-label" text="Label" />
   </children>
 </AnchorPane>
