--- a/src/main/resources/fxml/remote_html_preview.fxml
+++ b/src/main/resources/fxml/remote_html_preview.fxml
@@ -9,11 +9,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
 
-<AnchorPane prefHeight="329.0" prefWidth="530.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.RemoteHTMLPreviewController">
+<AnchorPane prefHeight="394.0" prefWidth="530.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.RemoteHTMLPreviewController">
   <children>
     <Label id="inscrutionsLabel" fx:id="instructionsLabel" prefHeight="41.0" prefWidth="395.0" text="%builtin.plugin.preview.remote_html.instructions.text" wrapText="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
     <Hyperlink fx:id="urlLink" alignment="CENTER" prefWidth="395.0" text="Hyperlink" underline="true" wrapText="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="55.0" />
-    <TableView fx:id="connectionTable" prefHeight="140.0" prefWidth="516.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="122.0" />
+    <TableView fx:id="connectionTable" prefHeight="190.0" prefWidth="502.0" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="122.0" />
     <Label layoutY="91.0" prefHeight="31.0" prefWidth="395.0" styleClass="title-label" text="%builtin.plugin.preview.remote_html.active_connections" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="16.0" />
+    <ToggleButton fx:id="trackActiveFileToggleButton" mnemonicParsing="false" prefWidth="165.0" text="%builtin.plugin.preview.remote_html.track_active_file" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="182.5" AnchorPane.rightAnchor="182.5" />
   </children>
 </AnchorPane>
