--- a/src/main/resources/fxml/html_preview.fxml
+++ b/src/main/resources/fxml/html_preview.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
 
-<AnchorPane minWidth="114.0" prefHeight="415.0000999999975" prefWidth="424.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.HTMLPreviewController">
+<AnchorPane minWidth="114.0" prefHeight="415.00019999999495" prefWidth="424.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.HTMLPreviewController">
   <children>
-    <AnchorPane fx:id="topToolBar" minHeight="22.0" prefHeight="41.0" prefWidth="423.0" styleClass="top-tool-bar" AnchorPane.bottomAnchor="374.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <AnchorPane fx:id="topToolBar" layoutY="-1.0" minHeight="22.0" prefHeight="41.00019999999495" prefWidth="423.0" styleClass="top-tool-bar" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       <children>
         <ChoiceBox fx:id="presetChoice" layoutY="10.0" prefWidth="396.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
           <items>
