--- a/src/main/resources/fxml/basic_projectwizard.fxml
+++ b/src/main/resources/fxml/basic_projectwizard.fxml
@@ -14,12 +14,12 @@
     <ValidatedTextField fx:id="nameTextField" layoutX="92.0" layoutY="19.0" prefWidth="228.0" />
     <ValidatedTextField fx:id="locationTextField" editable="false" layoutX="92.0" layoutY="68.0" prefWidth="228.0" />
     <Label layoutX="14.0" layoutY="22.0" text="%project_wizard.name" />
-    <Label layoutX="14.0" layoutY="66.0" text="%project_wizard.location" />
+    <Label layoutX="14.0" layoutY="71.0" text="%project_wizard.location" />
     <Button fx:id="browseButton" defaultButton="true" layoutX="326.0" layoutY="69.0" mnemonicParsing="false" prefWidth="94.0" text="%browse" />
     <AnchorPane minHeight="22.0" prefHeight="41.0" prefWidth="434.0" styleClass="bottom-tool-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       <children>
-        <Button id="positiveButton" fx:id="okButton" alignment="CENTER" contentDisplay="CENTER" layoutY="10.0" mnemonicParsing="false" prefWidth="73.0" text="%ok" textAlignment="CENTER" AnchorPane.rightAnchor="97.0" />
-        <Button id="negativeButton" fx:id="cancelButton" alignment="CENTER" cancelButton="true" contentDisplay="CENTER" defaultButton="true" layoutY="10.0" mnemonicParsing="false" prefWidth="73.0" text="%cancel" textAlignment="CENTER" AnchorPane.rightAnchor="14.0" />
+        <Button id="positiveButton" fx:id="okButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefWidth="73.0" text="%ok" textAlignment="CENTER" AnchorPane.bottomAnchor="2.0" AnchorPane.rightAnchor="97.0" AnchorPane.topAnchor="2.0" />
+        <Button id="negativeButton" fx:id="cancelButton" alignment="CENTER" cancelButton="true" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" prefWidth="73.0" text="%cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="2.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0" />
       </children>
     </AnchorPane>
     <Label fx:id="nameErrorLabel" alignment="CENTER_RIGHT" layoutX="92.0" layoutY="50.0" prefWidth="228.0" styleClass="error-label" text="Label" />
