--- a/src/main/resources/fxml/error_dialog.fxml
+++ b/src/main/resources/fxml/error_dialog.fxml
@@ -14,10 +14,10 @@
   <children>
     <AnchorPane minHeight="22.0" prefHeight="41.0" prefWidth="360.0" styleClass="bottom-tool-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       <children>
-        <Button id="closeButton" fx:id="closeButton" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" layoutY="10.0" mnemonicParsing="false" prefWidth="73.0" text="%close" textAlignment="CENTER" AnchorPane.leftAnchor="152.0" AnchorPane.rightAnchor="152.0" />
+        <Button fx:id="closeButton" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" prefWidth="73.0" text="%close" textAlignment="CENTER" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="152.0" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="2.0" />
       </children>
     </AnchorPane>
-    <Label fx:id="messageLabel" prefHeight="55.0" prefWidth="283.0" wrapText="true" AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="14.0" />
+    <Label fx:id="messageLabel" minHeight="55.0" prefWidth="283.0" wrapText="true" AnchorPane.leftAnchor="81.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="14.0" />
     <Label alignment="CENTER" prefHeight="55.0" prefWidth="57.0" styleClass="dialog-error-symbol" text="X" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="15.0" />
   </children>
 </AnchorPane>
