--- a/src/main/resources/fxml/picker_dialog.fxml
+++ b/src/main/resources/fxml/picker_dialog.fxml
@@ -14,11 +14,11 @@
   <children>
     <AnchorPane minHeight="22.0" prefHeight="41.0" prefWidth="360.0" styleClass="bottom-tool-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       <children>
-        <Button fx:id="okButton" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" layoutY="10.0" mnemonicParsing="false" prefWidth="73.0" text="%ok" textAlignment="CENTER" AnchorPane.rightAnchor="97.0" />
-        <Button fx:id="cancelButton" alignment="CENTER" cancelButton="true" contentDisplay="CENTER" layoutY="10.0" mnemonicParsing="false" prefWidth="73.00009999999747" text="%cancel" textAlignment="CENTER" AnchorPane.rightAnchor="14.0" />
+        <Button fx:id="okButton" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" prefWidth="73.0" text="%ok" textAlignment="CENTER" AnchorPane.bottomAnchor="2.0" AnchorPane.rightAnchor="97.0" AnchorPane.topAnchor="2.0" />
+        <Button fx:id="cancelButton" alignment="CENTER" cancelButton="true" contentDisplay="CENTER" mnemonicParsing="false" prefWidth="73.00009999999747" text="%cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="2.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0" />
       </children>
     </AnchorPane>
-    <Label fx:id="messageLabel" prefHeight="55.0" prefWidth="283.0" wrapText="true" AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="14.0" />
+    <Label fx:id="messageLabel" minHeight="55.0" prefWidth="283.0" wrapText="true" AnchorPane.leftAnchor="81.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="14.0" />
     <Label alignment="CENTER" prefHeight="55.0" prefWidth="57.0" styleClass="dialog-symbol" text="?" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="15.0" />
     <ChoiceBox fx:id="selectorChoice" layoutX="80.0" prefWidth="283.0" AnchorPane.bottomAnchor="57.0" AnchorPane.topAnchor="77.0">
       <items>
