--- a/src/main/resources/fxml/welcome.fxml
+++ b/src/main/resources/fxml/welcome.fxml
@@ -14,7 +14,7 @@
     <WebView fx:id="webView" prefHeight="404.0" prefWidth="732.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
     <AnchorPane minHeight="22.0" prefHeight="41.0" prefWidth="800.0" styleClass="bottom-tool-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       <children>
-        <Button fx:id="closeButton" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" layoutY="10.0" mnemonicParsing="false" prefWidth="67.0" text="%close" textAlignment="CENTER" AnchorPane.rightAnchor="14.0" />
+        <Button fx:id="closeButton" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" prefWidth="67.0" text="%close" textAlignment="CENTER" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="332.0" AnchorPane.rightAnchor="333.0" AnchorPane.topAnchor="2.0" />
       </children>
     </AnchorPane>
   </children>
