--- a/src/main/resources/fxml/html_preview.fxml
+++ b/src/main/resources/fxml/html_preview.fxml
@@ -12,9 +12,9 @@
 
 <AnchorPane minWidth="114.0" prefHeight="415.00019999999495" prefWidth="424.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.HTMLPreviewController">
   <children>
-    <AnchorPane fx:id="topToolBar" layoutY="-1.0" minHeight="22.0" prefHeight="41.00019999999495" prefWidth="423.0" styleClass="top-tool-bar" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+    <AnchorPane fx:id="topToolBar" layoutY="-1.0" minHeight="22.0" prefHeight="49.0" prefWidth="424.0" styleClass="top-tool-bar" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       <children>
-        <ChoiceBox fx:id="presetChoice" layoutY="10.0" prefWidth="396.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <ChoiceBox fx:id="presetChoice" prefWidth="396.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
@@ -28,7 +28,7 @@
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
       </padding>
     </AnchorPane>
-    <WebView fx:id="webView" prefHeight="332.9999694824219" prefWidth="424.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="41.0" />
+    <WebView fx:id="webView" prefHeight="326.0002136230469" prefWidth="424.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="48.0" />
     <AnchorPane fx:id="bottomToolBar" minHeight="22.0" prefHeight="41.0" prefWidth="424.0" styleClass="bottom-tool-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       <children>
         <HBox alignment="CENTER" prefHeight="41.0" prefWidth="424.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
