--- a/src/main/resources/fxml/html_preview.fxml
+++ b/src/main/resources/fxml/html_preview.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
 
-<AnchorPane minWidth="114.0" prefHeight="415.00019999999495" prefWidth="424.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.HTMLPreviewController">
+<AnchorPane minWidth="114.0" prefHeight="415.00019999999495" prefWidth="424.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.html.HTMLPreviewController">
   <children>
     <AnchorPane fx:id="topToolBar" layoutY="-1.0" minHeight="22.0" prefHeight="49.0" prefWidth="424.0" styleClass="top-tool-bar" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       <children>
