--- a/src/main/resources/fxml/remote_html_preview.fxml
+++ b/src/main/resources/fxml/remote_html_preview.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
 
-<AnchorPane prefHeight="394.0" prefWidth="530.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.RemoteHTMLPreviewController">
+<AnchorPane prefHeight="394.0" prefWidth="530.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.backelite.shift.gui.preview.html.RemoteHTMLPreviewController">
   <children>
     <Label id="inscrutionsLabel" fx:id="instructionsLabel" prefHeight="41.0" prefWidth="395.0" text="%builtin.plugin.preview.remote_html.instructions.text" wrapText="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
     <Hyperlink fx:id="urlLink" alignment="CENTER" prefWidth="395.0" text="Hyperlink" underline="true" wrapText="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="55.0" />
