--- a/src/main/resources/codemirror/theme/midnight.css
+++ b/src/main/resources/codemirror/theme/midnight.css
@@ -31,7 +31,7 @@
 
 /*<!--match-->*/
 span.CodeMirror-matchhighlight { background: #494949 }
-.CodeMirror-focused span.CodeMirror-matchhighlight { background: #314D67; !important }
+.CodeMirror-focused span.CodeMirror-matchhighlight { background: #314D67 !important; }
 
 /*<!--activeline-->*/
 .activeline {background: #253540 !important;}
