--- a/src/main/resources/wope/fxml/wope_preferences_panel.fxml
+++ b/src/main/resources/wope/fxml/wope_preferences_panel.fxml
@@ -11,10 +11,10 @@
 
 <AnchorPane minHeight="120.0" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="org.shiftedit.wope.WOPEPreferencesPanelController">
   <children>
-    <TextField fx:id="locationTextField" editable="false" layoutX="92.0" layoutY="44.0" prefWidth="228.0" />
+    <ValidatedTextField fx:id="licenseTextField" editable="false" layoutX="92.0" layoutY="44.0" prefWidth="228.0" />
     <Label layoutX="14.0" layoutY="47.0" text="%project_wizard.location" />
-    <Button fx:id="browseButton" defaultButton="true" layoutX="326.0" layoutY="45.0" mnemonicParsing="false" prefWidth="94.0" text="%browse" />
-    <Label fx:id="locationErrorLabel" alignment="CENTER_RIGHT" layoutX="92.0" layoutY="76.0" prefWidth="228.0" styleClass="error-label" text="Label" />
+    <Button fx:id="browseLicenseButton" defaultButton="true" layoutX="326.0" layoutY="45.0" mnemonicParsing="false" prefWidth="94.0" text="%browse" />
+    <Label fx:id="licenseErrorLabel" alignment="CENTER_RIGHT" layoutX="92.0" layoutY="76.0" prefWidth="228.0" styleClass="error-label" text="Label" />
     <Separator AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="37.0" />
     <Label prefWidth="405.0" styleClass="preferences-title-label" text="%preferences.wope.license" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
     <TableView prefHeight="200.0" prefWidth="403.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="136.0">
