--- a/src/main/resources/wope/fxml/wope_preferences_panel.fxml
+++ b/src/main/resources/wope/fxml/wope_preferences_panel.fxml
@@ -9,21 +9,18 @@
 <?import javafx.scene.web.*?>
 <?import org.shiftedit.gui.control.*?>
 
-<AnchorPane minHeight="120.0" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="org.shiftedit.wope.WOPEPreferencesPanelController">
+<AnchorPane minHeight="120.0" minWidth="-Infinity" prefHeight="485.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.shiftedit.wope.WOPEPreferencesPanelController">
   <children>
-    <ValidatedTextField fx:id="licenseTextField" editable="false" layoutX="92.0" layoutY="44.0" prefWidth="228.0" />
-    <Label layoutX="14.0" layoutY="47.0" text="%project_wizard.location" />
-    <Button fx:id="browseLicenseButton" defaultButton="true" layoutX="326.0" layoutY="45.0" mnemonicParsing="false" prefWidth="94.0" text="%browse" />
+    <ValidatedTextField fx:id="licenseTextField" editable="false" layoutY="45.0" prefWidth="235.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="114.0" />
+    <Label layoutX="14.0" layoutY="48.0" text="%project_wizard.location" />
+    <Button fx:id="browseLicenseButton" defaultButton="true" mnemonicParsing="false" prefWidth="94.0" text="%browse" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="45.0" />
     <Label fx:id="licenseErrorLabel" alignment="CENTER_RIGHT" layoutX="92.0" layoutY="76.0" prefWidth="228.0" styleClass="error-label" text="Label" />
     <Separator AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="37.0" />
     <Label prefWidth="405.0" styleClass="preferences-title-label" text="%preferences.wope.license" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
-    <TableView prefHeight="200.0" prefWidth="403.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="136.0">
-      <columns>
-        <TableColumn prefWidth="75.0" text="Column X" />
-        <TableColumn prefWidth="75.0" text="Column X" />
-      </columns>
-    </TableView>
     <Separator prefWidth="404.9999000000025" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="120.0" />
     <Label prefWidth="405.0" styleClass="preferences-title-label" text="%preferences.wope.runtimes" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="97.0" />
+    <TableView fx:id="runtimeTable" prefHeight="312.0" prefWidth="407.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="138.0" />
+    <Button fx:id="addButton" mnemonicParsing="false" prefWidth="94.0" text="%add" AnchorPane.bottomAnchor="11.0" AnchorPane.rightAnchor="114.0" />
+    <Button id="deleteButton" fx:id="removeButton" mnemonicParsing="false" prefWidth="94.0" text="%remove" AnchorPane.bottomAnchor="11.0" AnchorPane.rightAnchor="13.0" />
   </children>
 </AnchorPane>
